syntax = "proto3";

package user;

option go_package = "github.com/gilwong00/go-user-grpc;go_user_grpc";

service UserService {
	rpc CreateNewUser (NewUser) returns (User) {}
}

message NewUser {
	string name = 1;
	int32 age = 2;
}

message User {
	string name = 1;
	int32 age = 2;
	int32 id = 3;
}

// command to create pb files
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative user/user.proto